# weatherman

./: .gitlab-ci.yml  LICENSE  Pipfile  README.md  pyproject.toml
data/: 2022-02-10_processed_uk_weather_data.csv  2022-04-01_processed_uk_weather.csv  germany_weather.csv  netherlands_weather.csv  uk_weather.csv
data/archive/: germany_weather.csv  netherlands_weather.csv  uk_weather.csv
scripts/: Weather_Data_Processing.ipynb  config.yml  weather_api_call.ipynb  weather_api_call.py  weather_api_call_debug.ipynb
test/: test_weather_api_call.py
