[tool.poetry]
name = "weatherman"
version = "0.1.0"
description = ""
authors = ["Tayoso <ososanyatayo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^4.7"
click = "^8.1.3"
pandas = "^1.5.1"
requests = "^2.28.1"
pytz = "^2022.6"
PyYAML = "^6.0"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
